tools/witx/tests/witxt/simple.witxt
(witx
  (module $a)
)

(witx
  (module $a (typename $x u32))
)

(assert_invalid
  (witx
    (module $a
      (typename $x u32)
      (typename $x u32)
    )
  )
  "Redefinition of name `x`")
